Fix scrollbar margin

--- a/extension/input.css
+++ b/extension/input.css
@@ -6,19 +6,41 @@
 @tailwind components;
 @tailwind utilities;
 
+/*::-webkit-scrollbar {*/
+/*  width: 5px;*/
+/*  right: 5px;*/
+/*}*/
+
+/*!* Track *!*/
+/*::-webkit-scrollbar-track {*/
+/*  background: #f1f1f1;*/
+/*}*/
+
+/*!* Handle *!*/
+/*::-webkit-scrollbar-thumb {*/
+/*  background: #888;*/
+/*  border-radius: 100px;*/
+/*}*/
+
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 1em;  /* Total width including `border-width` of scrollbar thumb */
+  height: 0;
 }
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 100px;
+  height: 0.5em;
+  border: 0.25em solid rgba(0, 0, 0, 0);  /* Transparent border together with `background-clip: padding-box` does the trick */
+  background-clip: padding-box;
+  -webkit-border-radius: 1em;
+  background-color: rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.025);
+}
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
 
 /* Handle on hover */
